2017-03-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish MinGW.org WSL-5.0.1 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.0.1-dev, mingwrt-5.0.1-dll)
	(mingwrt-5.0.1-lic, mingwrt-5.0.1-man, libmingwex-5.0.1-dll-0)
	(libmingwex-5.0.1-dev, w32api-5.0.1-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2017-07-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add libmingwex-0.dll dependency for GCC-6.3.0

	* mingw32/mingw32-gcc4.xml (gcc-core-bin): Add dependency on...
	(mingw32-libmingwex-dll-0): ...this; it is required by cc1.exe
	* common/issue.log mingw32/issue.log: Update accordingly.

2017-07-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct a bogus dependency in earlier GCC-6.3.0 publication.

	* mingw32/mingw32-gcc4.xml (gcc-fortran-dev): Remove dependency on...
	(libgfortran-dll-3): ...this; it is inappropriate to the phoney parent
	package, attempts resolution to the wrong version, and likely fails.
	* common/issue.log mingw32/issue.log: Update accordingly.

2017-07-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade GCC; make version 6.3.0 the preferred release.

	* mingw32/mingw32-gcc4.xml: Add v6.3.0 references for all GCC
	component packages, associated sub-packages, and library packages.
	(mingw32-gcc-core-deps, mingw32-libgomp-deps): New virtual packages;
	they facilitate dependency resolution for non-GCC libraries with ABI
	versions which differ across GCC releases; users are advised to remove
	them after installation; (FIXME: let mingw-get do this automatically).
	(GCC Upgrade Blockers): New package hierarchy group; affiliate those
	aberrant "dev" packages, and temporary convenience packages, which
	we would prefer users to remove ASAP, after upgrade to GCC-6.3.
	* common/issue.log mingw32/issue.log: Update accordingly.

2017-07-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Pre-empt facility to support package visibility attributes.