@@ -1,4 +1,13 @@
-2017-03-09  Keith Marshall  <keithmarshall@users.sourceforge.net>
+2017-09-08  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Eliminate libgcc_s_dw2-1.dll dependencies in GMP DLLs.
+
+	* mingw32/mingw32-gmp.xml (gmp-6.1.2-2): Add release references.
+	(libgmp-6.1.2-2-dll-10, libgmpxx-6.1.2-2-dll-4): Likewise; these
+	represent the DLL component packages rebuilt with -static-libgcc.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
+2017-07-31  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Publish MinGW.org WSL-5.0.1 package set.
 
